2009-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (MagickFreeCMSTransform): Add a CMS transform
	destructor since otherwise Visual Studio does not like it.

	* tiff: Updated to libtiff 3.9.0.

2009-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (TimeImageCommand): Add a simple 'time'
	sub-command to time the execution of any other GraphicsMagick
	sub-command.  Similar in concept to the 'benchmark' sub-command
	but produces output similar to the 'time' command offered by the
	zsh command shell.  Handy for when 'time' is not available, or
	consistent output is desired.

	* magick/magick.c (MagickGetFileSystemBlockSize): New private
	function to allow getting desired filesystem block size.
	(MagickSetFileSystemBlockSize): New private function to allow
	setting desired filesystem block size.

	* magick/pixel_cache.c (WriteCacheIndexes, WriteCachePixels):
	Temporarily disable pixel cache row coalescing when writing to
	disk until we come up with a good way to optimize write sizes.

	* coders/meta.c (ReadMETAImage): Fix memory leak of profile blob.

2009-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/icc-transform.sh: Add a sanity-test for applying
	ICC profiles.

	* magick/profile.c (ProfileImage): Improve OpenMP performance.

2009-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Drawing of points,
	lines, and polygons is now accelerated using OpenMP with good
	speed-up.

2009-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawing_wand.c (DrawClearException): New function to clear
	drawing wand exception.
	(DrawGetException): New function to retrieve information regarding
	the last drawing wand exception (if any).
	(DrawRender): DrawRender() is now deprecated since it requires an
	Image pointer to be embedded in the drawing wand.  The image
	passed is subsequently lost by CloneDrawingWand() since it must