@@ -51,10 +51,10 @@ ralcgm:
 tiff:
 
   cvs -d :ext:bfriesen@cvs.graphicsmagick.org:/GraphicsMagick \
-    import -ko -m 'Import libtiff 3.8.2' delegates/tiff \
-    INITIAL TIFF_3_8_2
+    import -ko -m 'Import libtiff 3.9.1' delegates/tiff \
+    INITIAL TIFF_3_9_1
   cvs -d :ext:bfriesen@cvs.graphicsmagick.org:/GraphicsMagick \
-    checkout -jTIFF_3_8_0 -jTIFF_3_8_2 delegates/tiff
+    checkout -jTIFF_3_9_0 -jTIFF_3_9_1 delegates/tiff
 
 wmf:
 
