@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2009-08-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> tiff: Updated to libtiff 3.9.1.  3.9.0 was broken.
+
+</UL>
+<p>
 2009-08-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
