@@ -1,3 +1,7 @@
+2009-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tiff: Updated to libtiff 3.9.1.  3.9.0 was broken.
+
 2009-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/profile.c (MagickFreeCMSTransform): Add a CMS transform
